# bordercore-ai

./: .gitignore  .isort.cfg  README.md  models_template.yaml  pg_mcp_server.toml  pyproject.toml  requirements.txt  run_pg_mcp_server.py  run_tts.sh  settings_template.py
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  pytest.yml
api/: app.py
deploy/linux/systemd/: README.md  chatterbox-tts.service  kokoro-tts.service  llama-cpp.service  qwen3-tts.service  vllm.service
deploy/linux/systemd/llama-cpp-profiles/: Qwen3.6-27B-GGUF.env
deploy/linux/systemd/vllm-profiles/: Gemma-4-12B-QAT-W4A16.env  Qwen2.5-7B-Instruct-AWQ.env  Qwen2.5-Coder-7B-Instruct-AWQ.env  Qwen2.5-VL-3B-Instruct-AWQ.env  Qwen2.5-VL-7B-Instruct-AWQ.env  Qwen3-14B-AWQ.env  Qwen3-8B-AWQ.env  Qwen3-VL-4B-Instruct.env  Qwen3-VL-8B-Instruct-AWQ.env  Qwen3.5-4B.env  Qwen3.5-9B-AWQ.env  llama3-instruct-awq.env
deploy/mac/: com.bordercore.tts.plist
modules/: audio.py  chatbot.py  discord_bot.py  embeddings.py  function_calling.py  google_calendar.py  govee.py  inference.py  mcp_client.py  mcp_exceptions.py  model_manager.py  music.py  tool_registry.py  util.py  vllm_manager.py  weather.py  wolfram_alpha.py
scripts/: renew-ai-cert.sh  transcribe_voice.py
sensor/: ld.py
tests/: test_chatbot.py  test_model_manager.py  test_vllm_manager.py
tts/: __main__.py
tts/chatterbox_tts/: __main__.py  app_chatterbox.py  generate.py
tts/kokoro_tts/: __main__.py
tts/qwen3_tts/: __main__.py  app_qwen.py
webapp/: .stylelintrc.json  __main__.py  app.py  eslint.config.mjs  gpu_stats.py  index.js  package-lock.json  package.json  vite.config.js  vite.config.mjs
webapp/.husky/: pre-commit
webapp/front-end/: tailwind.css
webapp/front-end/entries/: chatbot.tsx  styles-css.js
webapp/front-end/react/: ChatApp.tsx
webapp/front-end/react/components/: AudioPlayer.tsx  AuroraBackground.tsx  ChatInput.tsx  CursorLines.tsx  EqBars.tsx  FileUpload.tsx  GpuOrb.tsx  ImagePreview.tsx  MessageItem.tsx  MessageList.tsx  Modal.tsx  ModelSelect.tsx  Nav.tsx  NexusViz.tsx  Options.tsx  PreferencesMenu.tsx  RadarSweep.tsx  ScrambleGlyphs.tsx  SentinelOrb.tsx  ShimmerBubble.tsx  Slider.tsx  (+9 more)
webapp/services/: bordercoreai-backend.service  bordercoreai-frontend.service
webapp/src/components/: ModelSelect.vue  Slider.vue
webapp/static/css/: shooting-stars.scss  styles.scss
webapp/static/vite/: chatbot-25Wdb6MQ.css  chatbot-CE6nWf_t.css  chatbot-CHYWotTq.css  chatbot-CmTZfwwM.css  chatbot-D3MNriw7.css  chatbot-f8ZC7pX3.css  styles-3TZnQSMn.css  styles-7oPltUC0.css  styles-98RyMg-b.css  styles-9WO3PbfD.css  styles-B57d9p7U.css  styles-BMFDKCvI.css  styles-BQhL5zQv.css  styles-BSL9Mw7U.css  styles-BfJNhkMT.css  styles-Bja6R0Hp.css  styles-BjyYqoJn.css  styles-C7ikALQk.css  styles-CdAz10I3.css  styles-Cg831DyK.css  styles-ClIaKnjM.css  styles-CooJ0Xen.css  styles-Cs4Smnag.css  styles-Csib536E.css  styles-CxnU_0ip.css  styles-D4FA04zu.css  styles-DAfMp_qr.css  styles-DFCpphzo.css  styles-DOSn3FNq.css  styles-Ddy28gPS.css  styles-DumD7YMb.css  styles-DzIQMJz3.css  styles-cWHx5BcL.css  styles-jfENGHx9.css  styles-kyEby2rE.css  styles-p5YfgZ-t.css
webapp/templates/: base.html
webapp/vue/: Options.vue  Sensor.vue  Thinking.vue
(+130 files in other folders)
