[project]
name = "bordercore-ai"
version="0.9.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "anthropic",
    "chromadb",
    "discord.py",
    "ffmpeg>=1.4",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-session",
    "google-api-python-client",
    "http-constants",
    "httplib2",
    "httpx",
    "kokoro>=0.9.4",
    "llama-cpp-python",
    "nltk",
    "numpy",
    "oauth2client",
    "openai",
    "pip>=26.0.1",
    "pypdf",
    "pysbd",
    "python-dateutil",
    "pynvml>=12.0.0",
    "pyyaml",
    "qwen-vl-utils>=0.0.14",
    "requests",
    "sounddevice",
    "soundfile>=0.13.1",
    "tiktoken",
    "torch",
    "torchvision>=0.25.0",
    "transformers",
    "yt-dlp",
]

[tool.setuptools]
packages = []

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.isort]
known_first_party = ["api.settings"]
known_third_party = ["flask_session"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
exclude = '''(?x)(
    # Exclude all test files
    ^tests/
    |
    # Exclude all older TTS files
    ^tts/old/
    |
    # Exclude test configuration file
    conftest\.py
)'''

[[tool.mypy.overrides]]
module = ["modules.rfc3339"]
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--capture=no --tb=line"
norecursedirs = ["webapp/node_modules"]
import_mode = "importlib"
filterwarnings = ["ignore"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
